# brandmint-oracle-aleph

./: .cursorrules  .dockerignore  .env.example  .gitignore  .readme-gen.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  SKILL.md  TODO.md  install.sh  pyproject.toml  requirements.txt
.claude/: launch.json  settings.json
.github/: RELEASE_NOTES.md  RELEASE_v4.4.1.md  RELEASE_v5.0.1.md  copilot-instructions.md
.playwright-mcp/: page-2026-04-16T23-58-16-249Z.yml  page-2026-04-16T23-58-41-756Z.yml
assets/: asset-registry.yaml  brand-config-schema.yaml  brand-config-template.yaml  example-tryambakam-noesis.yaml  template-variants.yaml
brandmint/: __init__.py  config_approval.py  runtime_env.py
brandmint-run/: autoresearch-log.jsonl
config/: inference-semantic-routing.v1.yaml
configs/: claude-desktop-config.json
docs/: asset-fidelity.md  homebrew-packaging.md  notebooklm-brand-sources.md  product-description.md  providers.md  release-checklist.md
experiments/: EXECUTION_SUMMARY.md  GITHUB_PLAN.md  GITHUB_SETUP_COMPLETE.md  INTEGRATION_EXAMPLES.md  README.md  RECOMMENDATIONS.md  autoresearch-log.md  create-github-issues.sh
references/: learnings.md  prompt-templates.md  reference-catalog.yaml  reference-map.json
scripts/: aesthetic_engine.py  asset_registry.py  classify_references.py  com.brandmint.twitter-sync.plist  download_tweet_assets.py  generate_detailed_ui_plan.py  generate_front_ui_taskmaster_v2.py  generate_noesis_assets.py  generate_pipeline.py  generate_wing_artworks.py  import_inference_skills.py  init_brand.py  list_references.py  localhost_port_guard.py  map_references.py  nbrain_runner.py  openrouter_runner.py  prompt_harness.py  run_pipeline.py  run_ui_stack.sh  source_quality_inspector.py  twitter_sync.py  twitter_sync_all.sh  ui_backend_bridge.py  update-release-docs.py  update_homebrew_formula.py  validate_skill_pack.py  wave_coverage_preflight.py
skills/: README.md  manifest.yaml
tasks/: lessons.md  todo.md
tests/: test_af15_af16_af17_pipeline_wiring.py  test_anti_meta_transform.py  test_asset_coverage.py  test_asset_mode.py  test_asset_provenance.py  test_brand_docs_publisher.py  test_completeness_gate.py  test_compositor.py  test_coverage_preflight.py  test_curation_scorer.py  test_design_memory.py  test_e2e_composite.py  test_fal_provider.py  test_generate_pipeline_spec_lock.py  test_generate_pipeline_template.py  test_gpt_image2_provider.py  test_hydrator.py  test_image_utils.py  test_inference_provider.py  (+25 more)
(+534 files in other folders)
