[project]
name = "brandmint"
version = "4.2.0"
description = "Unified brand creation orchestrator — text skills, visual assets, campaigns, video deliverables"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "fal-client>=0.4.0",
]

[project.scripts]
brandmint = "brandmint.cli.app:main"
bm = "brandmint.cli.app:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
publishing = ["notebooklm-py>=0.3.2"]
video = ["jinja2>=3.1"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["brandmint*"]
